force-app/main/default/objects/VDT_KPI_Configuration__mdt/VDT_KPI_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>VDT KPI Configuration</label>
    <pluralLabel>VDT KPI Configurations</pluralLabel>
</CustomObject>