force-app/main/default/objects/VDT_KPI_Configuration__mdt/fields/VDT_Default_Target__c.field-meta.xml
<CustomField>
    <fullName>VDT_Default_Target__c</fullName>
    <label>Default Target</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>