force-app/main/default/objects/VDT_KPI_Configuration__mdt/fields/VDT_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>VDT_Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>