force-app/main/default/objects/VDT_KPI_Configuration__mdt/fields/VDT_Formula_Text__c.field-meta.xml
<CustomField>
    <fullName>VDT_Formula_Text__c</fullName>
    <label>Formula Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>