force-app/main/default/objects/VDT_KPI_Configuration__mdt/fields/VDT_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>VDT_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>