force-app/main/default/objects/VDT_KPI_Configuration__mdt/fields/VDT_Type__c.field-meta.xml
<CustomField>
    <fullName>VDT_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>higher</fullName>
                <default>true</default>
                <label>Higher is better</label>
            </value>
            <value>
                <fullName>lower</fullName>
                <label>Lower is better</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>